@@ -1,3 +1,8 @@
+2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* loader/multiboot_elfxx.c (grub_multiboot_load_elfXX) [__mips]: Check
+	64-bit address as signed on MIPS.
+
 2010-05-28  Colin Watson  <cjwatson@ubuntu.com>
 
 	* configure.ac: AC_PROG_LEX sets LEX to ":" if lex is missing, not
